ads hide background of keyboard fixed.

--- a/app/src/main/res/layout/fragment_bank__loansave.xml
+++ b/app/src/main/res/layout/fragment_bank__loansave.xml
@@ -20,164 +20,11 @@
             android:padding="16dp">
 
             <LinearLayout
-                android:id="@+id/simpleLoanDropdownLayout"
+                android:id="@+id/loanRecordContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/curve_box"
-                android:elevation="4dp"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:orientation="vertical" />
 
-                <TextView
-                    android:id="@+id/textViewHeadingLoan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:fontFamily="@font/bold"
-                    android:text="Saved Loan Records"
-                    android:textColor="@color/darkGreen"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginBottom="25dp">
-
-                    <TextView
-                        android:id="@+id/loanAmt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/textViewHeading"
-                        android:layout_weight="0.5"
-                        android:fontFamily="@font/regular"
-                        android:gravity="center_vertical"
-                        android:text="Loan Amount :"
-                        android:textColor="#808080"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/loanAmtValue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/textViewHeading"
-                        android:layout_weight="0.5"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/regular"
-                        android:gravity="center_vertical"
-                        android:text="0.00"
-                        android:textColor="#808080"
-                        android:textSize="15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center">
-
-                    <TextView
-                        android:id="@+id/loanAmt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/textViewHeading"
-                        android:layout_weight="0.5"
-                        android:fontFamily="@font/regular"
-                        android:gravity="center_vertical"
-                        android:text="Loan Amount :"
-                        android:textColor="#808080"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/loanAmtValue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/textViewHeading"
-                        android:layout_weight="0.5"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/regular"
-                        android:gravity="center_vertical"
-                        android:text="0.00"
-                        android:textColor="#808080"
-                        android:textSize="15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginBottom="25dp">
-
-                    <TextView
-                        android:id="@+id/loanAmt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/textViewHeading"
-                        android:layout_weight="0.5"
-                        android:fontFamily="@font/regular"
-                        android:gravity="center_vertical"
-                        android:text="Loan Amount :"
-                        android:textColor="#808080"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/loanAmtValue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/textViewHeading"
-                        android:layout_weight="0.5"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/regular"
-                        android:gravity="center_vertical"
-                        android:text="0.00"
-                        android:textColor="#808080"
-                        android:textSize="15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginBottom="25dp">
-
-                    <TextView
-                        android:id="@+id/loanAmt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/textViewHeading"
-                        android:layout_weight="0.5"
-                        android:fontFamily="@font/regular"
-                        android:gravity="center_vertical"
-                        android:text="Loan Amount :"
-                        android:textColor="#808080"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/loanAmtValue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_below="@id/textViewHeading"
-                        android:layout_weight="0.5"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/regular"
-                        android:gravity="center_vertical"
-                        android:text="0.00"
-                        android:textColor="#808080"
-                        android:textSize="15sp" />
-
-                </LinearLayout>
-                <ListView
-                    android:id="@+id/list_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
