--- a/app/src/main/res/layout/dialog_record_name_save.xml
+++ b/app/src/main/res/layout/dialog_record_name_save.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingStart="18dp"
     android:paddingEnd="18dp"
-    android:paddingTop="18dp"
+    android:paddingTop="13dp"
     android:paddingBottom="0dp">
 
     <!-- Heading TextView -->
@@ -19,6 +19,7 @@
         android:textSize="20sp"
         style="@style/textColor"
         android:fontFamily="@font/bold"
+        android:layout_gravity="center"
         android:layout_marginTop="6dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="16dp" />
@@ -26,11 +27,12 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="15dp"
         android:background="@color/line_grey" />
 
     <EditText
         android:id="@+id/saveRecordNameEditText"
+        style="@style/CustomEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter record name"
@@ -38,9 +40,8 @@
         android:textAlignment="center"
         android:fontFamily="@font/regular"
         android:maxLength="15"
-        android:background="@drawable/edittext_curved_border"
         android:padding="10dp"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginBottom="15dp" />
 
     <View
         android:layout_width="match_parent"
@@ -50,8 +51,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button_cancel"
